<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/new_account"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:background="#E5EEF9">
    
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingBottom="10dip"
				android:background="#E5EEF9">
				     
    <RelativeLayout android:layout_width="fill_parent" 
    			android:layout_marginTop="15dip"
                android:layout_height="fill_parent"
                android:background="@drawable/content_bg"
                android:id="@+id/section1"> 
                
     <TextView android:id="@+id/l_section1" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content"
              android:text="@string/new_account"
              style="@style/LookSocialSectionHeader"/>  


    <TextView android:id="@+id/l_email" 
    		  android:textColor="#444444"
        	  android:layout_marginTop="10dip"	
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:text="@string/email"
              android:layout_below="@id/l_section1"/>
              
    <EditText android:id="@+id/email" 
    		  android:inputType="textEmailAddress"
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:minHeight="40dip"
              android:background="@android:drawable/editbox_background"
              android:layout_below="@id/l_email"/>

      <TextView android:id="@+id/l_username" 
      		  android:textColor="#444444" 
        	  android:layout_marginTop="10dip"	
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:text="@string/username"
              android:layout_below="@id/email"/>
              
    <EditText android:id="@+id/username" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content"
              android:singleLine="true"
              android:minHeight="40dip" 
              android:background="@android:drawable/editbox_background"
              android:layout_below="@id/l_username"/>           
  
      <TextView android:id="@+id/l_password"
      		  android:textColor="#444444"
              android:layout_marginTop="10dip" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:text="@string/password"
              android:layout_below="@id/username"/>
              
    <EditText android:id="@+id/password" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content"
              android:singleLine="true"
              android:minHeight="40dip" 
              android:layout_marginBottom="10dip"
              android:password="true"
              android:background="@android:drawable/editbox_background"
              android:layout_below="@id/l_password"/>     
              
              <Button
			android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
			android:id="@+id/moreOptionsButton"
     		android:layout_below="@id/password"
            android:background="@drawable/button_small" android:text="@string/more_options"/>
  
<Button
			android:id="@+id/save"
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"
            android:layout_below="@id/moreOptionsButton"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dip"
            android:text="@string/save"
            android:shadowColor="#FFFFFF"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:background="@drawable/button_small" />
 
<Button
			android:id="@+id/cancel" 
     		android:layout_width="wrap_content"  
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/save"
            android:layout_toLeftOf="@id/save"
            android:text="@string/cancel"
            android:background="@drawable/button_small" />
            </RelativeLayout>
            
   
</RelativeLayout>
</ScrollView>