<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:scrollbars="none">

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:paddingLeft="10dip" android:paddingRight="10dip"
		android:paddingBottom="10dip">


		<ImageView android:src="@drawable/logo_look"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:id="@+id/logo" android:scaleType="centerInside"
			android:layout_marginTop="10dip">
		</ImageView>


		<TextView android:id="@+id/welcome" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:typeface="serif"
			android:paddingRight="20dip" android:paddingLeft="20dip"
			android:layout_marginTop="20dip" android:layout_marginBottom="50dip"
			android:shadowColor="#FFFFFFFF" android:shadowDx="0"
			android:shadowDy="1" android:shadowRadius="1" android:textSize="20dip"
			android:layout_below="@id/logo" android:text="@string/welcome" />




		<Button android:id="@+id/user_list" android:layout_width="300dip"
			android:layout_height="wrap_content" android:textSize="14dip"
			android:shadowColor="#FFFFFFFF" android:singleLine="true"
			android:shadowDx="0" android:shadowDy="2" android:shadowRadius="1"
			android:textStyle="bold" android:background="@drawable/button"
			android:layout_below="@id/welcome" android:text="@string/user_list" />

		<Button android:id="@+id/augmented_reality"
			android:layout_width="300dip" android:layout_height="wrap_content"
			android:textSize="14dip" android:shadowColor="#FFFFFFFF"
			android:singleLine="true" android:layout_marginTop="10dip"
			android:shadowDx="0" android:shadowDy="2" android:shadowRadius="1"
			android:textStyle="bold" android:background="@drawable/button"
			android:layout_below="@id/user_list" android:text="@string/augmented_reality" />


	</RelativeLayout>

</ScrollView>
